objects/CCA2_Goal_Question__c.object
<CustomObject>
    <fields>
        <fullName>CCA2_Goal__c</fullName>
        <label>CCA2_Goal</label>
        <referenceTo>CCA2_Goal__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>CCA2_Goal_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCA2_Question__c</fullName>
        <label>CCA2_Question</label>
        <referenceTo>CCA2_Question__c</referenceTo>
        <relationshipLabel>Goals</relationshipLabel>
        <relationshipName>CCA2_Goal_Question</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConcatenatedFields__c</fullName>
        <formula>CCA2_Goal__c + &apos;_&apos; +  CCA2_Question__c</formula>
        <label>ConcatenatedFields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_goal_score_range__c</fullName>
        <label>Recommended goal score range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Goal Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CCA2_Goal__c</columns>
        <columns>CCA2_Question__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>CCA2_Goal Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>